--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,35 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TaskBeats" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TaskBeats" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/pink_300</item>
+        <item name="colorPrimaryVariant">@color/pink_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/brown_700</item>
+        <item name="colorSecondaryVariant">@color/brown_900</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Title3" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/rubik_medium</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/brown_900</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Body1" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/rubik_regular</item>
+        <item name="android:textColor">@color/brown_700</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="ButtonPrimary" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:textColor">@color/brown_900</item>
+    </style>
+
 </resources>
