--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -21,7 +21,7 @@
         tools:listitem="@layout/item_task" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
@@ -38,7 +38,6 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:visibility="gone"
