--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -12,7 +12,7 @@
         style="@style/Title3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Exemplo de título" />
+        tools:text="Title example" />
 
     <TextView
         android:id="@+id/tv_taskdescription"
@@ -20,6 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        tools:text="Descrição longa para testar a UI um pouco mais" />
+        tools:text="Long description to test the UI a little more" />
 
 </LinearLayout>
