--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,6 +10,6 @@
         style="@style/Title3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"/>
+        android:layout_marginLeft="0dp"/>
 
 </androidx.appcompat.widget.Toolbar>
